updated config file for dev purpose

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "app_title":"My Super great app to manage pictures !",
-    "pictures_path":"pictures_repo/",
+    "pictures_path":"../pictures_repo/",
     "git":{
         "enable":true,
         "auto_push":true,
