Config can now set items count to display

--- a/config.json
+++ b/config.json
@@ -12,6 +12,6 @@
         "trash":"File deleted by :user_name:\n\nReason is "
     },
     "display":{
-        "items_count":30
+        "items_by_page":30
     }
 }
