--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "app_title":"Manage pictures on top of git !",
     "pictures_path":"demo_repo/",
     "www_path":"app/www/",
-    "api_location":null,
+    "api_location":"http://localhost:8080",
     "git":{
         "enable":true,
         "auto_push":true,
